--- a/spring-dev-class01/src/main/resources/application.properties
+++ b/spring-dev-class01/src/main/resources/application.properties
@@ -4,3 +4,5 @@ server.port = 5050
 
 dentist.advice = "This is a dentist advice ?????????"
 general.advice = "This is a general advice"
+
+spring.main.lazy-initialization = true
