--- a/microservices/people-portal/src/main/resources/application.properties
+++ b/microservices/people-portal/src/main/resources/application.properties
@@ -2,18 +2,6 @@
 
 
 
-
-spring.datasource.url=jdbc:mysql://localhost:3306/people_portal_db
-spring.datasource.username=root
-spring.datasource.password=root
-
-#hibernate properties
-
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-
-#
-#eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
-#eureka.client.instance.preferIpAddress = true
-#spring.application.name = eurekaclient
+Api Gateway
+Actuator
+Apache Kafka
