--- a/Library-Management-System/src/main/resources/application.properties
+++ b/Library-Management-System/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=root
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-spring.main.lazy-initialization = true
+# spring.main.lazy-initialization = true
 
 
 
