--- a/microservices/banking-portal/src/main/resources/application.yml
+++ b/microservices/banking-portal/src/main/resources/application.yml
@@ -1,11 +1,10 @@
-instance:
-  prefer-id-address: true
-client:
-  fetch-registry: true
-  register-with-eureka: true
-  service-url:
-    defaultZone: http://localhost:8761/eureka
+
 
 spring:
-  application:
-    name: bank-portal
+  config:
+    import: optional:configserver:http://localhost:8083
+
+  profiles:
+    active: test
+
+
