--- a/car-rental-service/user-service/src/main/resources/application.properties
+++ b/car-rental-service/user-service/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.datasource.password=root
 
 spring.jpa.show-sqt=true
 spring.jpa.hibernate.ddl-auto=update
+
+management.endpoints.web.exposure.include=*
